--- a/MyStyle.css
+++ b/MyStyle.css
@@ -8,7 +8,13 @@ border-radius: 5px;
 }
 #ScrollBar
 {
+color:black;
+background-color:#C6884F;
 font-size:2vw;
 border-radius: 5px;
-background:url(/文件/遊戲開始頁面_選單選中.png)
+
+}
+#Share
+{
+background:url(/文件/排行榜_按鈕_分享.png)
 }
